--- a/Iteach/IteachAPI/appsettings.json
+++ b/Iteach/IteachAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=.;database=ITeach;Trusted_Connection=true;encrypt=false"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
