--- a/Iteach/IteachAPI/appsettings.json
+++ b/Iteach/IteachAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DBConnection": "Server=.;database=ITeach;Trusted_Connection=true;encrypt=false"
+    "DBConnection": "Server=;database=ITeach;Trusted_Connection=true;encrypt=false"
   },
   "Logging": {
     "LogLevel": {
